tests/machine/x/zig/map_nested_assign.error
Error on line 9: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/map_nested_assign.zig:9:17: error: local variable 'm' shadows local variable from outer scope
/workspace/mochi/tests/machine/x/zig/map_nested_assign.zig:7:13: note: previous declaration here

8:         m.put("outer", blk1: {
9:             var m = std.AutoHashMap([]const u8, i32).init(std.heap.page_allocator);
10:             m.put("inner", @as(i32, @intCast(1))) catch unreachable;
